--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,54 @@
 /* You can add global styles to this file, and also import other style files */
+
+.container {
+    max-width: 960px;
+}
+
+
+/*
+   * Custom translucent site header
+   */
+
+
+/*
+   * Dummy devices (replace them with your own or something else entirely!)
+   */
+
+
+/*
+   * Extra utilities
+   */
+
+.border-top {
+    border-top: 1px solid #e5e5e5;
+}
+
+.border-bottom {
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.box-shadow {
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+.flex-equal>* {
+    -ms-flex: 1;
+    -webkit-box-flex: 1;
+    flex: 1;
+}
+
+@media (min-width: 768px) {
+    .flex-md-equal>* {
+        -ms-flex: 1;
+        -webkit-box-flex: 1;
+        flex: 1;
+    }
+}
+
+.overflow-hidden {
+    overflow: hidden;
+}
+
+.home-img {
+    background-image: url("../src/assets/ropa-medioambiente.jpg");
+}
