--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class=" home-img position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+    <div class="col-md-5 p-lg-5 mx-auto my-5" style="color: rgb(255, 255, 255);background-color: rgb(87, 171, 192); opacity: 80%;">
+
+        <h1 class="display-4 font-weight-normal">Koq tienda online</h1>
+        <p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple's marketing pages.</p>
+    </div>
+</div>
