pruebas en home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,3 +5,12 @@
         <p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple's marketing pages.</p>
     </div>
 </div>
+
+<div class="container text-center" style="margin-top: 1500px;">
+    <div class="row">
+        <div class="col-md-4"><img src="../../../assets/remera.jpg" alt=""> </div>
+        <div class="col-md-4"><img src="../../../assets/remera.jpg" alt=""> </div>
+        <div class="col-md-4"><img src="../../../assets/remera.jpg" alt=""> </div>
+    </div>
+
+</div>
