Resto de componentes + Carousel en Home

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -13,10 +13,10 @@
                 <a class="nav-link" [routerLink]="['catalogo']">Catalogo</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Contacto</a>
+                <a class="nav-link " [routerLink]="['contacto']">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Donde estamos?</a>
+                <a class="nav-link " [routerLink]="['donde-estamos']">Donde estamos?</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
