--- a/src/app/components/catalogo/catalogo.component.html
+++ b/src/app/components/catalogo/catalogo.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 20px;">
+<div class="container animated fadeIn fast" style="margin-top: 20px;">
     <br>
     <h1>Catalogo</h1>
     <hr>
@@ -9,19 +9,16 @@
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+
             </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
+            <a class="btn btn-block btn-outline-info"> Ver más</a>
         </div>
         <div class="card">
             <img class="card-img-top" src="../../../assets/remera.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
+                <a class="btn btn-block btn-outline-info"> Ver más</a>
             </div>
         </div>
         <div class="card">
@@ -29,10 +26,7 @@
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
+                <a class="btn btn-block btn-outline-info"> Ver más</a>
             </div>
         </div>
     </div>
-</div>
