--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class=" home-img position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+<div class=" home-img position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light animated fadeIn">
     <div class="col-md-5 p-lg-5 mx-auto my-5" style="color: rgb(255, 255, 255);background-color: rgb(87, 171, 192); opacity: 80%;">
 
         <h1 class="display-4 font-weight-normal">Koq tienda online</h1>
@@ -6,61 +6,10 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-md-12">
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-
-                    <div class="col-sm-4">
-                        <img src="../../../assets/remera.jpg" class="d-block w-50" alt="...">
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                        </div>
-                    </div>
-
-
-                </div>
-                <div class="carousel-item">
-                    <img src="../../../assets/remera.jpg" class="d-block w-50" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="../../../assets/remera.jpg" class="d-block w-50" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-
-    </div>
-</div>
 
 
 
-
-<div class="container text-center" style="margin-top: 50px;">
+<div class="container text-center animated fadeIn fast" style="margin-top: 50px;">
     <div class="row">
         <div class="col-md-4"><img src="../../../assets/remera.jpg" alt=""> </div>
         <div class="col-md-4"><img src="../../../assets/remera.jpg" alt=""> </div>
