--- a/src/styles.css
+++ b/src/styles.css
@@ -54,11 +54,41 @@
 }
 
 .footer {
-    position: relative;
+    position: absolute;
     bottom: 0px;
     width: 100%;
 }
 
 .carousel-inner img {
     margin: auto;
+}
+
+
+/* Animaciones simples */
+
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.fast {
+    -webkit-animation-duration: 0.4s;
+    animation-duration: 0.4s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.fadeIn {
+    animation-name: fadeIn;
 }
