--- a/src/app/components/catalogo/catalogo.component.html
+++ b/src/app/components/catalogo/catalogo.component.html
@@ -3,30 +3,16 @@
     <h1>Catalogo</h1>
     <hr>
 
-    <div class="card-deck">
-        <div class="card">
-            <img class="card-img-top" src="../../../assets/remera.jpg" alt="Card image cap">
+    <div class="card-columns">
+        <div class="card" *ngFor="let prenda of stock">
+            <img class="card-img-top" src="{{ prenda.fotoPrincipal }}" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-
+                <h5 class="card-title">{{prenda.nombre}}</h5>
+                <p class="card-text">Campera comoda para salir a correr, liviana y te da superpoderes.</p>
+                <h3>${{prenda.precio}}</h3>
             </div>
             <a class="btn btn-block btn-outline-info"> Ver más</a>
         </div>
-        <div class="card">
-            <img class="card-img-top" src="../../../assets/remera.jpg" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <a class="btn btn-block btn-outline-info"> Ver más</a>
-            </div>
-        </div>
-        <div class="card">
-            <img class="card-img-top" src="../../../assets/remera.jpg" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <a class="btn btn-block btn-outline-info"> Ver más</a>
-            </div>
-        </div>
+
     </div>
+</div>
