--- a/src/app/components/catalogo/catalogo.component.html
+++ b/src/app/components/catalogo/catalogo.component.html
@@ -9,9 +9,9 @@
             <div class="card-body">
                 <h5 class="card-title">{{prenda.nombre}}</h5>
                 <p class="card-text">Campera comoda para salir a correr, liviana y te da superpoderes.</p>
-                <h3>{{prenda.precio | currency}}</h3>
+                <h3>{{prenda.precio | currency }}</h3>
             </div>
-            <a class="btn btn-block btn-outline-info"> Ver más</a>
+            <a [routerLink]="['/articulo', prenda.id ]" class="btn btn-block btn-outline-info"> Ver más</a>
         </div>
 
     </div>
