--- a/src/app/components/prenda/prenda.component.css
+++ b/src/app/components/prenda/prenda.component.css
@@ -32,3 +32,10 @@
     line-height: 70px;
     font-size: 1.3rem;
 }
+
+.dot {
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    display: inline-block;
+}
