--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,19 +1,4 @@
-<div class=" home-img position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light animated fadeIn">
-    <div class="col-md-5 p-lg-5 mx-auto my-5" style="color: rgb(255, 255, 255);background-color: rgb(87, 171, 192); opacity: 80%;">
-
-        <h1 class="display-4 font-weight-normal">Koq tienda online</h1>
-        <p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple's marketing pages.</p>
-    </div>
-</div>
-
-
-
-
-<div class="container text-center animated fadeIn fast" style="margin-top: 50px;">
-    <div class="row">
-        <div class="col-md-4"><img src="../../../assets/remera.jpg" alt=""> </div>
-        <div class="col-md-4"><img src="../../../assets/remera.jpg" alt=""> </div>
-        <div class="col-md-4"><img src="../../../assets/remera.jpg" alt=""> </div>
-    </div>
+<div>
+    <img class="container-fluid" src="../../../assets/fondo-test.png" alt="">
 
 </div>
