--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -2,12 +2,24 @@
     <div>
         <h1>Contactanos</h1>
         <hr>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, nisi pariatur voluptatibus reiciendis ea dolor explicabo velit. Debitis exercitationem pariatur, a sapiente enim dolor totam accusamus id optio sunt ab.</p>
+        <p>En tiempos de cuarentena quedemonos todos en casa.</p>
+        <br>
+        <p>A ver si actualizamos forro Si alguno de nuestros articulos te intereso, no dudes en hablarnos por Whatsapp o alguna de nuestras redes sociales
+        </p>
+
+        <i class="fa fa-whatsapp" aria-hidden="true"></i> <a> 1141605908</a>
+        <br>
+        <br>
+        <p> <strong> No te olvides de visitar nuestras redes </strong></p>
+
+
+
+
 
     </div>
     <br>
     <h3> Donde estamos?</h3>
-    <br>
+    <hr>
     <div>
         <p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2707.740060835285!2d-58.45105735283406!3d-34.63793316471379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbcd44ea2af7%3A0x8682af25d98a7380!2sAv.%20Carabobo%201077%2C%20C1406%20DGK%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1588717961162!5m2!1ses!2sar"
