--- a/src/app/components/prenda/prenda.component.html
+++ b/src/app/components/prenda/prenda.component.html
@@ -17,6 +17,12 @@
                     <h5>Talles</h5>
                     <hr>
                     <a *ngFor="let t of tallesNumero" class="btn btn-outline-primary mr-2 mt-2">{{t}}</a>
+                    <hr>
+                    <h5>Precio
+                        <small>varia precio segun talle</small>
+                    </h5>
+                    <h3> {{ articulo.precio | currency }} </h3>
+
                 </div>
             </div>
         </div>
