--- a/src/app/components/prenda/prenda.component.html
+++ b/src/app/components/prenda/prenda.component.html
@@ -19,7 +19,7 @@
                     <a *ngFor="let t of tallesNumero" class="btn btn-outline-primary mr-2 mt-2">{{t}}</a>
                     <hr>
                     <h5>Precio
-                        <small>varia precio segun talle</small>
+                        <small>Varia precio segun talle</small>
                     </h5>
                     <h3> {{ articulo.precio | currency }} </h3>
 
