Upgrade en Articulos
Ng if para el caroussel, no se muestra si la lista de otrasFotos es vacia
Ngfor para recorrer esa lista de fotos

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div>
-    <img class="container-fluid" src="../../../assets/fondo-test.png" alt="">
+<div class="container-fluid mb-5">
+    <img class="container-fluid" src="assets/img/koq-fondo.jpg" alt="">
 
 </div>
