--- a/src/app/components/prenda/prenda.component.html
+++ b/src/app/components/prenda/prenda.component.html
@@ -2,7 +2,7 @@
     <h1>{{ articulo.nombre | capitalizar:false }}</h1>
     <hr>
     <div class="row">
-        <div class="container-fluid col-md-4">
+        <div class="container-fluid col-md-6">
             <img [src]="articulo.fotoPrincipal" alt="">
         </div>
 
@@ -29,31 +29,23 @@
     </div>
 </div>
 
-<div class="mt-20 mb-10 container">
+<div class="mt-20 mb-10 container" *ngIf="articulo.otrasFotos.length > 0">
     <h1> <small>Galeria de fotos</small> </h1>
     <hr>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleCaptions" *ngFor="let item of articulo.otrasFotos;let index = index" [attr.data-slide-to]="index"></li>
         </ol>
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img [src]="articulo.fotoPrincipal" class="d-block w-90" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img [src]="articulo.fotoPrincipal" class="d-block w-90" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img [src]="articulo.fotoPrincipal" class="d-block w-90" alt="...">
+            <div class="carousel-item" *ngFor="let item of articulo.otrasFotos;let index = index;let isFirst = first" [ngClass]="{active:isFirst}">
+                <img [src]="item" class="d-block w-90" [alt]="item.title">
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
