Cambios media y Home

--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -16,7 +16,7 @@
             <i class="fa fa-instagram"></i>
 
         </a>
-        <a [routerLink]="['contacto']" class="col-md-4">
+        <a href="https://api.whatsapp.com/send?phone=541141605908" class="col-md-4">
 
             <i class="fa fa-whatsapp"></i>
 
