--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,9 @@
-<div class="container-fluid mb-5">
-    <img class="container-fluid" src="assets/img/koq-fondo.jpg" alt="">
+<div class="container" style=" background-color:rgb(255, 179,191);">
+    <div class="">
+        <img src="assets/img/fondo-koq-rosa.jpeg" alt="">
+    </div>
+    <div class="container-fluid" style="text-align: center;">
+        <img src="assets/img/fondo-koq-rosa2.jpeg" style="width: 50%;" alt="">
+    </div>
 
 </div>
