Mejora HTML home
TO DO: ngStyle in prenda.component

--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -6,8 +6,10 @@
         <br>
         <p>A ver si actualizamos forro Si alguno de nuestros articulos te intereso, no dudes en hablarnos por Whatsapp o alguna de nuestras redes sociales
         </p>
+        <a type="button" class="btn btn-outline-success" href="https://api.whatsapp.com/send?phone=541141605908">
+            <i class="fa fa-whatsapp" aria-hidden="true"></i> 1141605908
+        </a>
 
-        <i class="fa fa-whatsapp" aria-hidden="true"></i> <a> 1141605908</a>
         <br>
         <br>
         <p> <strong> No te olvides de visitar nuestras redes </strong></p>
