--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,14 @@
-<div class="container" style=" background-color:rgb(255, 179,191);">
-    <div class="">
-        <img src="assets/img/fondo-koq-rosa.jpeg" alt="">
+<div class="container">
+    <div class="card mb-3 mt-5">
+        <img src="assets/img/fondo-koq-rosa.jpeg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">KOQ</h5>
+            <p class="card-text"> Trabajamos con ropa de mujer, poleras, chombas, camisas, calzas, lo que buscas</p>
+        </div>
     </div>
-    <div class="container-fluid" style="text-align: center;">
-        <img src="assets/img/fondo-koq-rosa2.jpeg" style="width: 50%;" alt="">
+
+    <div class="container-fluid mb-3 mt-5" style="text-align: center;">
+        <img src="assets/img/temporada.jpg" style="width: 50%;" alt="">
     </div>
 
 </div>
