--- a/src/app/components/prenda/prenda.component.html
+++ b/src/app/components/prenda/prenda.component.html
@@ -16,7 +16,7 @@
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <h5>Talles</h5>
                     <hr>
-                    <a *ngFor="let t of tallesNumero" class="btn btn-outline-primary mr-2 mt-2">{{t}}</a>
+                    <a *ngFor="let t of tallesNumero" class="btn btn-outline-primary mr-2 mt-2 ">{{t}}</a>
                     <hr>
                     <h5>Precio
                         <small>Varia precio segun talle</small>
@@ -27,8 +27,9 @@
                     <div class="alert alert-secondary text-center">
                         <div>
                             <h5 class="button btn btn-circle mr-3 mb-2" *ngFor="let color of misColores" [ngStyle]="{'background-color': getColor(color),'color':'white'}" style="-webkit-text-stroke-width: 0.5px; 
-                            -webkit-text-stroke-color: rgb(212, 212, 212);">{{ color | colorEnDos }} </h5>
+                            -webkit-text-stroke-color: rgb(212, 212, 212);" (click)="displayColor(color)">{{ color | colorEnDos }} </h5>
                         </div>
+                        <a class="btn btn-block mt-3" [ngStyle]="{'background-color': colorDisplayed}">{{colorTextDisplayed}} </a>
                     </div>
                 </div>
             </div>
