--- a/src/app/components/prenda/prenda.component.html
+++ b/src/app/components/prenda/prenda.component.html
@@ -6,7 +6,7 @@
             <img [src]="articulo.fotoPrincipal" alt="">
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-3">
 
             <div class="card mt-3" style="width: 18rem;">
                 <div class="card-body">
@@ -29,7 +29,7 @@
                             <h5 class="button btn btn-circle mr-3 mb-2" *ngFor="let color of misColores" [ngStyle]="{'background-color': getColor(color),'color':'white'}" style="-webkit-text-stroke-width: 0.5px; 
                             -webkit-text-stroke-color: rgb(212, 212, 212);" (click)="displayColor(color)">{{ color | colorEnDos }} </h5>
                         </div>
-                        <a class="btn btn-block mt-3" [ngStyle]="{'background-color': colorDisplayed}">{{colorTextDisplayed}} </a>
+                        <a class="btn btn-block mt-3" [ngStyle]="{'background-color': colorDisplayed}"><strong>{{colorTextDisplayed}} </strong> </a>
                     </div>
                 </div>
             </div>
