--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -6,8 +6,8 @@
         <br>
         <p>A ver si actualizamos forro Si alguno de nuestros articulos te intereso, no dudes en hablarnos por Whatsapp o alguna de nuestras redes sociales
         </p>
-        <a type="button" class="btn btn-outline-success" href="https://api.whatsapp.com/send?phone=541141605908">
-            <i class="fa fa-whatsapp" aria-hidden="true"></i> 1141605908
+        <a type="button" class="btn btn-outline-success" href="https://api.whatsapp.com/send?phone=541124890202">
+            <i class="fa fa-whatsapp" aria-hidden="true"></i> 1124890202
         </a>
 
         <br>
@@ -23,9 +23,21 @@
     <h3> Donde estamos?</h3>
     <hr>
     <div>
-        <p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2707.740060835285!2d-58.45105735283406!3d-34.63793316471379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbcd44ea2af7%3A0x8682af25d98a7380!2sAv.%20Carabobo%201077%2C%20C1406%20DGK%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1588717961162!5m2!1ses!2sar"
-                width="900" height="600" frameborder="0" style="border:20;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        </p>
+        <div>
+            <h5>Galeria Luz - Local 12</h5>
+            <iframe class="mt-3 mb-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d820.760178687836!2d-58.479938761877584!3d-34.62841138604676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc993836dd053%3A0x9cfc2f13309143d8!2sAv.%20Avellaneda%203579%2C%20C1407%20EJC%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1591321251733!5m2!1ses-419!2sar"
+                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
+        </div>
+        <div>
+            <h5>Galeria La Divina - Local 10</h5>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.024028011422!2d-58.47674718435068!3d-34.628833080452935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9920129b5c5%3A0x6c92424464f11fa1!2sCuenca%20245%2C%20C1406%20CABA!5e0!3m2!1ses-419!2sar!4v1591321515917!5m2!1ses-419!2sar"
+                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+        <div>
+            <h5>Galeria Santiago Apostol - Local 5</h5>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.024028011422!2d-58.47674718435068!3d-34.628833080452935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9920129b5c5%3A0x6c92424464f11fa1!2sCuenca%20245%2C%20C1406%20CABA!5e0!3m2!1ses-419!2sar!4v1591321515917!5m2!1ses-419!2sar"
+                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
     </div>
 </div>
