--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,12 +1,14 @@
-<nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">KOQ ICONO</a>
+<nav class="navbar navbar-expand-xl mw-100 navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+        <img src="assets/img/navbar-ico.jpg" width="80" height="50" alt="" loading="lazy" class="rounded-pill">
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active" routerLinkActive="active">
+            <li class="nav-item " routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['home']">Home</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
