--- a/src/app/components/catalogo/catalogo.component.html
+++ b/src/app/components/catalogo/catalogo.component.html
@@ -1,4 +1,4 @@
-<div class="container animated fadeIn fast" style="margin-top: 20px;">
+<div class="container animated fadeIn" style="margin-top: 20px;">
     <br>
     <h1>Catalogo</h1>
     <hr>
