--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -1,10 +1,7 @@
 <div class="container animated fadeIn" style="margin-top: 40px;">
     <div>
         <h1>Contactanos</h1>
-        <hr>
-        <p>En tiempos de cuarentena quedemonos todos en casa.</p>
-        <br>
-        <p>A ver si actualizamos forro Si alguno de nuestros articulos te intereso, no dudes en hablarnos por Whatsapp o alguna de nuestras redes sociales
+        <p>En tiempos de cuarentena quedemonos todos en casa. <br> Si alguno de nuestros articulos te intereso, no dudes en hablarnos por Whatsapp o alguna de nuestras redes sociales
         </p>
         <a type="button" class="btn btn-outline-success" href="https://api.whatsapp.com/send?phone=541124890202">
             <i class="fa fa-whatsapp" aria-hidden="true"></i> 1124890202
