--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-xl mw-100 navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" [routerLink]="['home']">
         <img src="assets/img/navbar-ico.jpg" width="80" height="50" alt="" loading="lazy" class="rounded-pill">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
