--- a/src/app/components/catalogo/catalogo.component.html
+++ b/src/app/components/catalogo/catalogo.component.html
@@ -2,6 +2,7 @@
     <br>
     <h1>Catalogo</h1>
     <hr>
+    <app-loading *ngIf="loading"></app-loading>
 
     <div class="card-columns">
         <div class="card" *ngFor="let prenda of stock">
