--- a/src/app/components/catalogo/catalogo.component.html
+++ b/src/app/components/catalogo/catalogo.component.html
@@ -1,6 +1,7 @@
 <div class="container animated fadeIn" style="margin-top: 20px;">
     <br>
     <h1>Catalogo</h1>
+    <span> Aca vas a poder ver todos nuestros articulos, recorda que podes tocar el boton de <strong> ver mas</strong> para verlos en detalle</span>
     <hr>
     <app-loading *ngIf="loading"></app-loading>
 
